--- a/index.html
+++ b/index.html
@@ -11,24 +11,27 @@
     <meta name="keywords" content="KMRL, Document Management, Metro Rail, Kochi, Employee Portal, Dashboard" />
 
     <!-- Updated favicon to use new minimalistic metro-themed icons -->
+    <!-- Updated favicon references to use KMRL logo -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/jpeg" sizes="32x32" href="/favicon-32x32.jpg" />
-    <link rel="icon" type="image/jpeg" sizes="16x16" href="/favicon-16x16.jpg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.jpg" />
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="/kmrl-logo.jpg" />
+    <link rel="icon" type="image/jpeg" sizes="16x16" href="/kmrl-logo.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/kmrl-logo.jpg" />
 
     <!-- Open Graph / Facebook -->
     <!-- Updated Open Graph title to Employee Dashboard -->
     <meta property="og:title" content="KMRL Employee Dashboard" />
     <meta property="og:description" content="Advanced document intelligence and management dashboard for KMRL employees" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+    <!-- Updated og:image to use KMRL logo -->
+    <meta property="og:image" content="/kmrl-logo.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Updated Twitter title to Employee Dashboard -->
     <meta name="twitter:title" content="KMRL Employee Dashboard" />
     <meta name="twitter:description" content="Document intelligence dashboard for KMRL employees" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <!-- Updated twitter:image to use KMRL logo -->
+    <meta name="twitter:image" content="/kmrl-logo.jpg" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://kmrl-docuflow.lovable.app/" />
